fix form on mobiles

--- a/src/AddBook/wwwroot/style.css
+++ b/src/AddBook/wwwroot/style.css
@@ -286,3 +286,12 @@ svg {
         background-color: #469ABE; /* lighten 20%*/
     }
 }
+
+@media screen and (max-width: 600px) {
+    label, input, button, .column2 {
+        grid-column: 1 / 5;
+    }
+    .span2 {
+        grid-column: span 3;
+    }
+}
